Added some flex

--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
     </div>
 
     <div class="header">
-        <h1 class="title">UN SUSTAINABLE DEVELOPMENT GOAL #4: EDUCATION</h1>
+        <!--<img src="images/books.jpg">-->
+        <h1 class="title">UNITED NATIONS SUSTAINABLE DEVELOPMENT GOAL #4: EDUCATION</h1>
     </div>
 
     <div class="intro">
-        <img >
+        <img class="book-left" style="width: 500px; height: auto;" src="images/books.jpg">
+        <div class="vert">
+            <h3 style="font-size: medium; margin-left: 15px;">The Basics</h3>
+            <p style="margin-left: 15px;">ummmmmm</p>
+        </div>
     </div>
 </body>
 </html>
